# tidyllm

./: .copier-answers.yml  .dxtignore  .gitignore  AGENT.md  LICENSE  README.md  claude_desktop_config.example.json  development.md  manifest.json  pyproject.toml  tidyllm.cache
.cursor/rules/: general.mdc  python.mdc
.github/workflows/: ci.yml  publish.yml
apps/: add_card.py  pdf_to_note.py  transcribe_audio.py
devtools/: lint.py
docs/: CLAUDE_DESKTOP_SETUP.md  FASTMCP_EVALUATION.md  add_card_spec.md  adopt_chat_repl.md  app-ideas.md  cli-parsing-bug-report.md  database.md  dxt-packaging-plan.md  electron-architecture.md  file-object-tools-spec.md  linq-refactoring-spec.md  part-serialization.md  part-unification-spec.md  registry-fastmcp-integration-spec.md  selection-spec.md  serialization-analysis.md  source-spec.md  stream-linq-migration-analysis.md  tidyllm-spec-2.md  tidyllm-spec.md  tidyllm.md  tools_and_utilities_reference.md  tools_implementation_plan.md  transcribe_spec.md
scripts/: dxt_main.py  fastapi.py  package-dxt.py  precommit.py  run_fastapi.py  run_fastmcp.py  run_tidyllm.py  tidyllm.py
src/tidyllm/: README.md  __init__.py  agent.py  cache.py  cli.py  context.py  data.py  database.py  database_models.py  discover.py  docstring.py  duration.py  evaluation.py  function_schema.py  library.py  linq.py  llm.py  models.py  multi_cli.py  prompt.py  protocol_utils.py  registry.py  schema.py  serialization.py  source.py  stream.py
src/tidyllm/adapters/: __init__.py  cli.py  fastapi_adapter.py  fastmcp_adapter.py  fastmcp_main.py
src/tidyllm/model/: linq.py
src/tidyllm/model/source/: __init__.py  lib.py
src/tidyllm/source/: __init__.py  gdrive.py  lib.py  model.py
src/tidyllm/tools/: __init__.py  anki.py  audio.py  calculator.py  config.py  context.py  db.py  desktop.py  file.py  manage_db.py  notes.py  object.py  playwright.py  recipe.py  transcribe.py  tts.py  vad.py  vocab_table.py
src/tidyllm/tools/calculator/: __init__.py  evaluation.py  lib.py  prompt.md  test.py
src/tidyllm/types/: duration.py  linq.py  part.py  serialization.py  source.py
src/tidyllm/types/ext/: gdrive.py
src/tidyllm/types/part/: __init__.py  audio.py  gdrive.py  image.py  lib.py  pdf.py
src/tidyllm/types/source/: __init__.py  gdrive.py  lib.py
src/tidyllm/ui/: __init__.py  selection.py
tests/: test_add_card.py  test_anki.py  test_audio.py  test_cache.py  test_calculator.py  test_cli.py  test_context.py  test_db.py  test_decorators.py  test_desktop.py  test_evaluation.py  test_execution.py  test_fastapi_adapter.py  test_fastmcp_adapter.py  test_fastmcp_integration.py  test_file.py  test_griffe.py  test_integration.py  test_library.py  test_linq.py  test_llm.py  test_manage_db.py  test_notes.py  test_object.py  test_part.py  test_pdf_part.py  test_playwright.py  test_prompt.py  test_recipe_image_serialization.py  test_registry.py  test_schema.py  test_serialization.py  test_source.py  test_transcribe.py  test_transcribe_source.py  test_tts.py  test_vocab_tools.py
